tests/parser/should_pass/extra_whitespace_asserts.csp
assert STOP :[ deadlock free [F] ]
