tests/parser/should_fail/assert_timed_section.csp
Timed (f) {
    assert STOP :[deadlock free]
}
